[package]
name = "restate-limiter"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Hierarchical concurrency limiter with 3-level rule matching"

[features]
default = []
# Enables bilrost encoding for limiter types that contain ReString
# (LimitKey, RulePattern). Lets external crates put those into bilrost
# messages without pulling in the rule book.
bilrost = ["dep:bilrost", "restate-util-string/bilrost"]
# Enables the persistent rule book (RuleBook, PersistedRule,
# diff/apply_change machinery). Implies `bilrost`.
rule-book = [
    "bilrost",
    "dep:bytes",
    "dep:restate-clock",
    "dep:restate-encoding",
]

[dependencies]
restate-workspace-hack = { workspace = true }

restate-clock = { workspace = true, optional = true }
restate-encoding = { workspace = true, optional = true }
restate-types = { workspace = true }
restate-util-string = { workspace = true }

bilrost = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
slotmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
restate-limiter = { path = ".", default-features = false, features = ["rule-book"] }
